# Tesis-Vision

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  exceptions.py  logging.py
app/db/: __init__.py  connection.py
app/domain/: __init__.py  catalog.py
app/repositories/: __init__.py  products.py  recognitions.py
app/schemas/: product.py
app/services/: detector.py  image_utils.py  normalizer.py  ocr.py  pipeline.py  suggestions.py
app/web/: admin.html  index.html  productos.html
app/web/static/: admin.js  app.js  productos.js  styles.css
data/demo_yolo/: dataset.yaml  manifest.csv
data/demo_yolo/labels/: train.cache  val.cache
models/runs/demo_product_label/: args.yaml  results.csv
models/runs/demo_product_label_v2/: args.yaml  results.csv
models/runs/demo_product_label_v3/: args.yaml  results.csv
runtime/: products.db
scripts/: fetch_commons_images.py  fetch_commons_round2.py  prepare_demo_yolo_dataset.py  train_yolo_demo.py
tests/: conftest.py  test_api.py  test_normalizer.py  test_productos.py
