[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tesis-retail-vision-mvp"
version = "0.1.0"
description = "MVP FastAPI para registro inicial de productos retail peruanos con YOLO y OCR."
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4.0",
    "numpy>=1.26.0,<3.0.0",
    "opencv-python-headless>=4.10.0.84",
    "ultralytics>=8.2.0",
    "paddleocr>=2.8.0,<3.0.0",
    "paddlepaddle>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
